Fix submissionStatus column width so it doesn't wrap

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -526,7 +526,7 @@ table td {
 .awardnum-funder-column {
   min-width: 9.5rem;
 }
-.status-column {min-width: 7rem;}
+.status-column {min-width: 7.6rem;}
 .funder-column {
   min-width: 9.5rem;
   max-width: 12.5rem;
